--- a/src/assets/styles/Reset.css
+++ b/src/assets/styles/Reset.css
@@ -49,3 +49,13 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+body {
+    font-family: "Roboto", sans-serif !important;
+    overflow: hidden;
+}
+
+h1 {
+    font-family: "Quantico", sans-serif;
+    font-weight: 700;
+}
